--- a/app/resources/css/list.css
+++ b/app/resources/css/list.css
@@ -1,4 +1,4 @@
-.listOfRegattas{
+.list{
     background-color: rgba(112, 112, 112, 0.2);
     border-radius: 10px;
     padding: 20px;
@@ -36,7 +36,7 @@ h1{
     color: #4ea9ff;
 }   
 
-.regattaListButtons{
+#delete{
     font-family: 'Roboto';
     background-color: #666666;
     color: white;
@@ -49,12 +49,25 @@ h1{
     width: 50%;
 }
 
-button:hover{
+#change {
+    font-family: 'Roboto';
+    background-color: #666666;
+    color: white;
+    font-weight: bold;
+    margin: 10px;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    width: 50%;
+}
+
+button:hover {
     background-color: #4ea9ff;
 }
 
 @media (max-width: 776px) {
-    .listOfRegattas {
+    .listOfClasses {
         background-color: rgba(112, 112, 112, 0.2);
         border-radius: 10px;
         padding: 20px;
@@ -65,7 +78,7 @@ button:hover{
         margin-right: 0;
         box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     }
-    .regattaListButtons{
+    .courseListButtons{
         margin: 0;
         width: 100%;
     }
