Implemented the Register/Login, fixed some stuff

--- a/app/resources/css/bodystyle.css
+++ b/app/resources/css/bodystyle.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 body {
-    background: #c4c4c4 url(../images/bodybackground.png);
+    background: #c4c4c4 url(../../storage/images/page-img/bodybackground.png);
     background-size: auto;
     font-family: 'Roboto';
     min-width: 360px;
