--- a/app/resources/css/home.css
+++ b/app/resources/css/home.css
@@ -76,6 +76,7 @@ h1 {
     margin: 5% auto;
     text-align: center;
     list-style-type: none;
+    width: 70%;
 }
 
 .rightColumn .linkFormat li {
@@ -83,17 +84,25 @@ h1 {
 }
 
 .rightColumn .linkFormat a {
-    color: blue;
+    display: block;
+    background-color: #4ea9ff;
+    border-radius: 10px;
+    padding: 12px;
+    color: white;
     text-decoration: none;
+    font-weight: bold;
+    font-size: 14px;
+    margin-bottom: 5%;
 }
 
 .rightColumn .linkFormat a:hover {
-    text-decoration: underline;
+    background-color: #666666;
 }
 
-.rightColumn .linkFormat a:visited {
+
+/* .rightColumn .linkFormat a:visited {
     color: darkblue;
-}
+} */
 
 
 /*Regattalinks styling end*/
