--- a/app/resources/css/login.css
+++ b/app/resources/css/login.css
@@ -30,6 +30,7 @@ input[type=email] {
     margin-top: 6px;
     margin-bottom: 16px;
     resize: none;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 input[type=submit] {
@@ -53,7 +54,7 @@ input[type=submit]:hover {
     margin-right: auto;
     text-align: center;
     border-radius: 10px;
-    background-color: rgba(112, 112, 112, 0.2);
+    background-color: rgba(112, 112, 112, 0.1);
     color: #4ea9ff;
     padding: 20px;
 }
