--- a/app/resources/css/navbar.css
+++ b/app/resources/css/navbar.css
@@ -112,6 +112,22 @@ nav .btncontent {
     display: none;
 }
 
+.adminnavbutton {
+    background-color: #666666;
+    border-radius: 10px;
+    padding: 12px;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.adminnavbutton:hover {
+    background-color: #ff4e4e;
+}
+
 @media screen and (max-width: 776px) {
     nav {
         max-height: unset;
