--- a/app/resources/css/articles.css
+++ b/app/resources/css/articles.css
@@ -1,17 +1,10 @@
 .content {
     background-color: rgba(112, 112, 112, 0.3);
-    border-radius: 10px;
-    padding: 20px;
-    min-height: 50vh;
-    min-width: 720px;
-    max-width: 80vw;
-    margin-left: auto;
-    margin-right: auto;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 
 .newsContent {
     background-color: rgba(112, 112, 112, 0.2);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     padding: 20px;
     min-height: 50vh;
@@ -19,7 +12,6 @@
     max-width: 80vw;
     margin-left: auto;
     margin-right: auto;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 
 h1 {
@@ -50,7 +42,7 @@ h1 {
     margin-right: auto;
     margin-bottom: 15px;
     text-align: justify;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
 }
 
 .button {
@@ -63,17 +55,6 @@ h1 {
     font-size: 15px;
     margin-left: auto;
     margin-right: auto;
-}
-
-.addbtn {
-    background-color: #666666;
-    border-radius: 10px;
-    padding: 10px 20px;
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 15px;
-    float: right;
 }
 
 .button:hover,
@@ -160,14 +141,9 @@ tr:nth-child(even) {
 }
 
 @media (max-width: 776px) {
-    .content,
     .newsContent {
-        border-radius: 10px;
-        padding: 20px;
         min-height: 50vh;
-        max-width: 100vw;
-        min-width: unset;
-        margin-left: 0;
-        margin-right: 0;
+        min-width: 0vw;
+        max-width: unset;
     }
 }
