--- a/app/resources/css/bodystyle.css
+++ b/app/resources/css/bodystyle.css
@@ -10,10 +10,40 @@ body {
     word-break: break-word;
 }
 
+.content {
+    background-color: rgba(112, 112, 112, 0.2);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    padding: 20px;
+    min-height: 50vh;
+    min-width: 720px;
+    max-width: 80vw;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 hr {
     height: 10px;
     border: 0;
     box-shadow: 0 10px 10px -10px #666666 inset;
+}
+
+.tableContainer {
+    overflow: auto;
+    overflow-y: hidden;
+}
+
+.tableContainer table {
+    width: max-content;
+    margin-left: auto;
+    margin-right: auto;
+    border-collapse: collapse;
+}
+
+.tableContainer td,
+.tableContainer th {
+    width: 100px;
+    padding: 8px;
 }
 
 .error {
@@ -24,4 +54,12 @@ hr {
 .success {
     color: #0084ff;
     font-weight: bold;
+}
+
+@media (max-width: 776px) {
+    .content {
+        min-height: 50vh;
+        min-width: 0vw;
+        max-width: unset;
+    }
 }
