--- a/app/resources/css/list.css
+++ b/app/resources/css/list.css
@@ -1,5 +1,6 @@
-.list{
+.list {
     background-color: rgba(112, 112, 112, 0.2);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     padding: 20px;
     min-height: 50vh;
@@ -7,13 +8,11 @@
     max-width: 80vw;
     margin-left: auto;
     margin-right: auto;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     text-align: center;
 }
 
 table {
     background-color: rgba(112, 112, 112, 0.2);
-    font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
     text-align: center;
@@ -30,25 +29,13 @@ tr:nth-child(even) {
     background-color: #dddddd;
 }
 
-h1{
+h1 {
     text-align: center;
     font-size: 30px;
     color: #4ea9ff;
-}   
-
-#delete{
-    font-family: 'Roboto';
-    background-color: #666666;
-    color: white;
-    font-weight: bold;
-    margin: 10px;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    width: 50%;
 }
 
+#delete,
 #change {
     font-family: 'Roboto';
     background-color: #666666;
@@ -60,6 +47,7 @@ h1{
     border-radius: 10px;
     cursor: pointer;
     width: 50%;
+    display: inline-block;
 }
 
 button:hover {
@@ -67,6 +55,11 @@ button:hover {
 }
 
 @media (max-width: 776px) {
+    .list {
+        min-height: 50vh;
+        min-width: 0vw;
+        max-width: unset;
+    }
     .listOfClasses {
         background-color: rgba(112, 112, 112, 0.2);
         border-radius: 10px;
@@ -78,7 +71,7 @@ button:hover {
         margin-right: 0;
         box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     }
-    .courseListButtons{
+    .courseListButtons {
         margin: 0;
         width: 100%;
     }
