--- a/app/resources/css/navbar.css
+++ b/app/resources/css/navbar.css
@@ -112,16 +112,25 @@ nav .btncontent {
     display: none;
 }
 
-.adminnavbutton {
+.adminNavbar {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    text-align: center;
+    grid-column: 1/3;
+    grid-row: 2/3;
+}
+
+.adminNavbar .adminnavbutton {
     background-color: #666666;
     border-radius: 10px;
     padding: 12px;
     color: white;
     text-decoration: none;
     font-weight: bold;
-    font-size: 15px;
-    margin-left: auto;
-    margin-right: auto;
+    display: inline-block;
+    width: max-content;
+    margin-bottom: 10px;
 }
 
 .adminnavbutton:hover {
@@ -131,10 +140,8 @@ nav .btncontent {
 @media screen and (max-width: 776px) {
     nav {
         max-height: unset;
-        max-width: 100vw;
+        max-width: unset;
         min-width: 100vw;
-        margin-left: 0;
-        margin-right: 0;
     }
     nav a {
         float: none;
