--- a/app/resources/css/regatta.css
+++ b/app/resources/css/regatta.css
@@ -1,15 +1,3 @@
-.content {
-    background-color: rgba(112, 112, 112, 0.2);
-    border-radius: 10px;
-    padding: 20px;
-    min-height: 50vh;
-    min-width: 720px;
-    max-width: 80vw;
-    margin-left: auto;
-    margin-right: auto;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
-}
-
 input[type=submit] {
     font-family: 'Roboto';
     background-color: #666666;
@@ -50,16 +38,4 @@ tr:nth-child(even) {
     background-color: #dddddd;
 }
 
-@media (max-width: 776px) {
-    .content {
-        background-color: rgba(112, 112, 112, 0.2);
-        border-radius: 10px;
-        padding: 20px;
-        min-height: 50vh;
-        max-width: 100vw;
-        min-width: unset;
-        margin-left: 0;
-        margin-right: 0;
-        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
-    }
-}
+@media (max-width: 776px) {}
