--- a/app/resources/css/articles.css
+++ b/app/resources/css/articles.css
@@ -62,6 +62,11 @@ h1 {
     background-color: #ff4e4e;
 }
 
+label {
+    font-weight: bold;
+    color: #ff4e4e;
+}
+
 input[type=text],
 textarea {
     font-family: 'Roboto';
@@ -73,6 +78,10 @@ textarea {
     margin-top: 6px;
     margin-bottom: 16px;
     resize: none;
+}
+
+textarea {
+    height: 500px;
 }
 
 input[type=submit] {
