--- a/app/resources/css/navbar.css
+++ b/app/resources/css/navbar.css
@@ -5,7 +5,7 @@ nav {
     border-radius: 10px;
     max-width: 60vw;
     max-height: 46px;
-    min-width: 760px;
+    min-width: 846px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 2vh;
@@ -98,9 +98,12 @@ nav .btncontent {
 }
 
 .navprofilepic {
-    max-width: 16px;
     vertical-align: middle;
     border-radius: 50%;
+    object-fit: cover;
+    border-radius: 50%;
+    height: 1rem;
+    width: 1rem;
 }
 
 .right-button {
@@ -137,7 +140,7 @@ nav .btncontent {
     background-color: #ff4e4e;
 }
 
-@media screen and (max-width: 776px) {
+@media (max-width: 916px) {
     nav {
         max-height: unset;
         max-width: unset;
