--- a/app/resources/css/bodystyle.css
+++ b/app/resources/css/bodystyle.css
@@ -28,6 +28,15 @@ hr {
     box-shadow: 0 10px 10px -10px #666666 inset;
 }
 
+.profilepic {
+    margin-left: 20px;
+    margin-right: 20px;
+    object-fit: cover;
+    border-radius: 50%;
+    height: 12em;
+    width: 12em;
+}
+
 .tableContainer {
     overflow: auto;
     overflow-y: hidden;
@@ -38,6 +47,7 @@ hr {
     margin-left: auto;
     margin-right: auto;
     border-collapse: collapse;
+    border-style: dashed;
 }
 
 .tableContainer td,
@@ -56,7 +66,7 @@ hr {
     font-weight: bold;
 }
 
-@media (max-width: 776px) {
+@media (max-width: 916px) {
     .content {
         min-height: 50vh;
         min-width: 0vw;
