--- a/app/resources/css/contact.css
+++ b/app/resources/css/contact.css
@@ -22,7 +22,8 @@ h1 {
     color: #4ea9ff;
 }
 
-input[type=text],
+input[type=name],
+input[type=email],
 input[type=tel],
 textarea {
     font-family: 'Roboto';
