fixed 'Contact' and 'Add article' textareas height

--- a/app/resources/css/contact.css
+++ b/app/resources/css/contact.css
@@ -37,6 +37,10 @@ textarea {
     resize: none;
 }
 
+textarea {
+    height: 30vh;
+}
+
 input[type=submit] {
     font-family: 'Roboto';
     background-color: #666666;
