--- a/app/resources/css/navbar.css
+++ b/app/resources/css/navbar.css
@@ -118,7 +118,7 @@ nav .btncontent {
 .adminNavbar {
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    margin-bottom: 1em;
     text-align: center;
     grid-column: 1/3;
     grid-row: 2/3;
