--- a/app/resources/css/class.css
+++ b/app/resources/css/class.css
@@ -9,21 +9,20 @@
     margin-right: auto;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr;
 }
 
-ul{
+ul {
     list-style: none;
 }
 
-#timetableTitle{
+#timetableTitle {
     font-size: 20px;
     color: #4ea9ff;
 }
 
 .class_title {
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 1/2;
     text-align: center;
     font-size: 34px;
@@ -33,19 +32,35 @@ ul{
 }
 
 .class_description {
-    grid-column: 1/3;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    text-align: justify;
+}
+
+.class_logo {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    padding: 10px;
+}
+
+.class_logo img {
+    width: 100%;
+}
+
+.timetable {
+    grid-column: 3/4;
     grid-row: 2/3;
     text-align: center;
 }
 
-.timetable {
-    grid-column: 1/3;
+hr {
     grid-row: 3/4;
-    text-align: center;
+    grid-column: 1/4;
+    width: 100%;
 }
 
 .coach_content {
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 4/5;
     display: grid;
     grid-template-columns: 1fr 3fr;
@@ -80,35 +95,42 @@ ul{
         box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     }
     .class_title {
-        grid-column: 1/3;
-        grid-row: unset;
+        grid-column: 1/4;
+        grid-row: 1/2;
         text-align: center;
     }
+    .class_logo {
+        grid-column: 1/4;
+        grid-row: 2/3;
+    }
     .class_description {
-        grid-column: 1/3;
-        grid-row: unset;
+        grid-column: 1/4;
+        grid-row: 3/4;
         text-align: center;
     }
     .timetable {
-        grid-column: 1/3;
-        grid-row: unset;
+        grid-column: 1/4;
+        grid-row: 4/5;
         text-align: center;
     }
+    hr {
+        grid-row: 5/6;
+    }
     .coach_content {
-        grid-column: 1/3;
-        grid-row: unset;
+        grid-column: 1/4;
+        grid-row: 6/7;
         display: grid;
         grid-template-columns: 1fr 3fr;
         grid-template-rows: 1fr;
     }
     .coach_picture {
         text-align: center;
-        grid-column: 1/3;
-        grid-row: unset;
+        grid-row: 1/2;
+        grid-column: 1/4;
     }
     .coach_description {
-        grid-column: 1/3;
-        grid-row: unset;
+        grid-column: 1/4;
+        grid-row: 2/3;
         text-align: center;
     }
 }
